swim_common/src/form/tests/derive/validated_form/all_items_unit.stderr
error: Attribute not supported by unit compound types
  --> $DIR/all_items_unit.rs:19:19
   |
19 |     #[form(schema(all_items(num_items = 5)))]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
